refactor: rewrite doGet method on CompleteMatchServlet